# Resume_evaluator

./: pyproject.toml  requirements.txt
Job_description/: jd.txt
app/: config.py  database.py  init_db.py  llm.py  main.py  models.py  oauth2.py
app/routes/: auth.py  chat.py  score.py  upload.py  user.py
app/schemas/: auth_schema.py  chat_schema.py  result_schema.py  schema.py  upload_schema.py
app/services/: evaluation_service.py  jd_parser.py  match_result.py  resume_parser.py  text_extractor.py
app/services/chat_service/: chat_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Navbar.jsx
frontend/src/pages/: Login.jsx  Register.jsx  Result.jsx  UploadJD.jsx  UploadResume.jsx
frontend/src/services/: api.js
