[project]
name = "resume-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncio>=4.0.0",
    "fastapi[standard]>=0.139.1",
    "groq>=1.5.0",
    "langchain>=1.3.14",
    "psycopg2>=2.9.12",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]
